--- a/level03_218683_loading.html
+++ b/level03_218683_loading.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<head>
+  <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +8,8 @@
     <meta name="description" content="Improve your mind.">
     <meta name="author" content="Leone Veiga">
 
-    <meta http-equiv="refresh" content="10;url=level02_818074.html" />
-
+    <meta http-equiv="refresh" content="10;url=level03_218683.html" />
+ 
     <title>Plus and Times</title>
 
     <!-- Bootstrap Core CSS -->
@@ -31,7 +31,7 @@
       }
 
       #myBar {
-        width: 100%;
+        width: 1%;
         height:5vm;
         background-color: #18bc9c;
         font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -42,7 +42,7 @@
 
 <body onload="myFunction(); myFunction2();">
 
- 
+
 <!-- Facebook -->
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -60,20 +60,19 @@
 
   <script>
 
-      var minA = 1;
-      var maxA = 6;
-      var minB = 1;
-      var maxB = 6;
+      var minA = 0;
+      var maxA = 8;
+      var minB = 0;
+      var maxB = 8;
 
       var xpc = 2;
 
-      var next = "level02_818074.html";
+      var next = "level03_218683.html";
 
   </script>
 
-  <script src="js/plusandtimes-leone.js"></script>
-
-
+    <script src="js/plusandtimes-leone.js"></script>
+ 
 <footer>
     <div class="container">
       <div class="row text-center" style="background-color:rgb(35,49, 64);">
@@ -83,8 +82,8 @@
             <span class="name" align="left" style="color:white; font-size:20px">  Plus and Times </span>
           <p>
             <a> Levels: </a>
-            <a href="level01_925148.html" class="btn-xs btn-default" style="background-color:rgb( 23, 186, 156);">01</a>
-            <a class="btn-xs btn-default" style="background-color:rgb(255, 255, 255);" disabled>02</a>
+            <a href="level01_925148.html" class="btn-xs btn-default" style="background-color:rgb(139, 221, 206);">01</a>
+            <a href="level02_818074.html" class="btn-xs btn-default" style="background-color:rgb( 23, 186, 156);">02</a>
             <a class="btn-xs btn-default" style="background-color:rgb(255, 255, 255);" disabled>03</a>
             <a class="btn-xs btn-default" style="background-color:rgb(255, 255, 255);" disabled>04</a>
             <a class="btn-xs btn-default" style="background-color:rgb(255, 255, 255);" disabled>05</a>
@@ -103,11 +102,11 @@
     <div class="col-xs-3">
     </div>
     <div class="col-xs-6">
-      <h3>Level 01 completed! </h3>
+      <h3>Level 02 completed! </h3>
       <div id="myProgress">
         <div id="myBar">100%</div>
       </div>
-      <h4><i>Loading Level 02 ... </i></h4>
+      <h4><i>Loading Level 03 ... </i></h4>
       <h3 class="name" ><a style="color:#18bc9c;" class="fa fa-refresh fa-spin"> </a> </h3>
     </div>  
     <div class="col-xs-3"></div>
@@ -183,7 +182,7 @@
           <div class="col-md-2 col-xs-2">
              <div class="row">
              <h2> &nbsp; </h2>
-              <img  id="myImage" src="img/sunglass.png" class="img-emoticon-pat" >
+              <img  id="myImage" src="img/pensativo50.jpg" class="img-emoticon-pat" >
               <h2> &nbsp; </h2>
               </div>
               <div class="row text-center">
@@ -227,7 +226,7 @@
                         <div class="row">
                           <div class="btn-group">
                           <a type="button" class="btn btn-info" onclick="PB0();" data-toggle="tooltip" 
-                          data-placement="bottom" title="Clear"> C </a>
+                          data-placement="bottom" title="Clear" > C </a>
                           <a type="button" class="btn btn-primary" onclick="B0();">0</a>
                           <a type="button" class="btn btn-basic" onclick="MB0();" disabled data-toggle="tooltip" 
                           data-placement="bottom" title="Minus sign"> &minus; </a>                        
@@ -252,7 +251,6 @@
 
 </section>
 
-
 <!-- Footer -->
 <footer>
     <div class="container">
@@ -275,7 +273,7 @@
     </div>
 </footer>
 
-		<!-- jQuery Version 1.11.0 -->
+    <!-- jQuery Version 1.11.0 -->
 <script src="js/jquery-1.11.0.js"></script>
 
 <!-- Plugin JavaScript -->
@@ -286,7 +284,6 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="js/landing-page.js"></script>
-
 
 
 <script>
@@ -301,5 +298,6 @@
 </script>
 
 
-	</body>
+
+  </body>
 </html>
