--- a/level04_844676_loading.html
+++ b/level04_844676_loading.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-	<head>
+  <head>
 
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,10 +8,10 @@
     <meta name="description" content="Improve your mind.">
     <meta name="author" content="Leone Veiga">
 
-    <meta http-equiv="refresh" content="10;url=level02_818074.html" />
+    <meta http-equiv="refresh" content="10;url=level04_844676.html" />
 
     <title>Plus and Times</title>
-
+ 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
@@ -31,7 +31,7 @@
       }
 
       #myBar {
-        width: 100%;
+        width: 1%;
         height:5vm;
         background-color: #18bc9c;
         font-family: "Roboto Slab","Helvetica Neue",Helvetica,Arial,sans-serif;
@@ -42,7 +42,8 @@
 
 <body onload="myFunction(); myFunction2();">
 
- 
+
+
 <!-- Facebook -->
 <div id="fb-root"></div>
 <script>(function(d, s, id) {
@@ -60,19 +61,18 @@
 
   <script>
 
-      var minA = 1;
-      var maxA = 6;
-      var minB = 1;
-      var maxB = 6;
+      var minA = 0;
+      var maxA = 10;
+      var minB = 0;
+      var maxB = 10;
 
-      var xpc = 2;
+      var xpc = 1;
 
-      var next = "level02_818074.html";
+      var next = "level04_844676.html";
 
   </script>
 
-  <script src="js/plusandtimes-leone.js"></script>
-
+    <script src="js/plusandtimes-leone.js"></script>
 
 <footer>
     <div class="container">
@@ -83,9 +83,9 @@
             <span class="name" align="left" style="color:white; font-size:20px">  Plus and Times </span>
           <p>
             <a> Levels: </a>
-            <a href="level01_925148.html" class="btn-xs btn-default" style="background-color:rgb( 23, 186, 156);">01</a>
-            <a class="btn-xs btn-default" style="background-color:rgb(255, 255, 255);" disabled>02</a>
-            <a class="btn-xs btn-default" style="background-color:rgb(255, 255, 255);" disabled>03</a>
+            <a href="level01_925148.html" class="btn-xs btn-default" style="background-color:rgb(139, 221, 206);">01</a>
+            <a href="level02_818074.html" class="btn-xs btn-default" style="background-color:rgb(139, 221, 206);">02</a>
+            <a href="level03_218683.html" class="btn-xs btn-default" style="background-color:rgb( 23, 186, 156);">03</a>
             <a class="btn-xs btn-default" style="background-color:rgb(255, 255, 255);" disabled>04</a>
             <a class="btn-xs btn-default" style="background-color:rgb(255, 255, 255);" disabled>05</a>
           </p>
@@ -103,11 +103,11 @@
     <div class="col-xs-3">
     </div>
     <div class="col-xs-6">
-      <h3>Level 01 completed! </h3>
+      <h3>Level 03 completed! </h3>
       <div id="myProgress">
         <div id="myBar">100%</div>
       </div>
-      <h4><i>Loading Level 02 ... </i></h4>
+      <h4><i>Loading Level 04 ... </i></h4>
       <h3 class="name" ><a style="color:#18bc9c;" class="fa fa-refresh fa-spin"> </a> </h3>
     </div>  
     <div class="col-xs-3"></div>
@@ -183,7 +183,7 @@
           <div class="col-md-2 col-xs-2">
              <div class="row">
              <h2> &nbsp; </h2>
-              <img  id="myImage" src="img/sunglass.png" class="img-emoticon-pat" >
+              <img  id="myImage" src="img/pensativo50.jpg" class="img-emoticon-pat" >
               <h2> &nbsp; </h2>
               </div>
               <div class="row text-center">
@@ -252,7 +252,6 @@
 
 </section>
 
-
 <!-- Footer -->
 <footer>
     <div class="container">
@@ -275,7 +274,7 @@
     </div>
 </footer>
 
-		<!-- jQuery Version 1.11.0 -->
+    <!-- jQuery Version 1.11.0 -->
 <script src="js/jquery-1.11.0.js"></script>
 
 <!-- Plugin JavaScript -->
@@ -286,7 +285,6 @@
 
 <!-- Custom Theme JavaScript -->
 <script src="js/landing-page.js"></script>
-
 
 
 <script>
@@ -301,5 +299,6 @@
 </script>
 
 
-	</body>
+
+  </body>
 </html>
